agregando nuevos archivos dl proyecto del portafolio

--- a/index.html
+++ b/index.html
@@ -11,18 +11,35 @@
 </head>
 
 <body>
+    <figure class="to_top"></figure>
     <div class="portafolio">
         <nav class="menu">
             <div class="menu_container">
-                <a href="#" class="menu_titulo">Francisco B.</a>
+                <a href="#" class="menu_title">Francisco B.</a>
                 <ul class="menu_list">
-                    <li class="menu_item"><a class="item_a" href="#">Inicio</a></li>
+                    <li class="menu_item"><a class="item_a" href="#inicio">Inicio</a></li>
                     <li class="menu_item"><a class="item_a" href="#">Sobre mi</a></li>
                     <li class="menu_item"><a class="item_a" href="#">Proyectos</a></li>
                     <li class="menu_item"><a class="item_a" href="#">Contacto</a></li>
                 </ul>
             </div>
         </nav>
+        <section class="inicio" id="inicio">
+            <h1 class="inicio_title">Inicio</h1>
+            <div class="inicio_container">
+                <figure class="person_pinture"></figure>
+                <div class="person">
+                    <h1 class="person_name ">Francisco José Bello Salcedo</h1>
+                    <span class="slider span">Soy</span>
+                    <span class="person_ocupation span"></span>
+                    <p class="person_description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quia corrupti quod.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quia corrupti quod.
+                    </p>
+                    <a class="btn_about_my" href="#">Sobre mí</a>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 
